@@ -13,7 +13,8 @@ the full text of the license.
 '''
 
 import os.path, sys, subprocess, os
-from gettext import gettext as _
+from apport import unicode_gettext as _
+
 try:
     import gobject, gtk
     import apport.ui
